src/main/resources/static/errors/MissingSemicolon.error.txt
MissingSemicolon.java:3: error: ';' expected
        int x = 5
                 ^
1 error
